# hitnotedmx

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SPEED.md  STATUS.md  TODO.md
Source/: Composition.cpp  Composition.h  DmxVisualizer.cpp  DmxVisualizer.h  EnttecProDmx.cpp  EnttecProDmx.h  MidiLog.cpp  MidiLog.h  MidiState.cpp  MidiState.h  Palette.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Recipes.cpp  Recipes.h  Rig.h  Showcase.cpp  Showcase.h  TriggerMenu.cpp  TriggerMenu.h  TriggerVocabulary.cpp  TriggerVocabulary.h
assets/showcase/Ableton Rack/: Hitnotenames.adg
installer/: install.command
mappings/: README.md  v1.tsv  v10.tsv  v11.tsv  v12.tsv  v13.tsv  v2.tsv  v5.tsv  v6.tsv  v7.tsv  v8.tsv  v9.tsv
tools/: MappingTool.cpp  RecipeCheck.cpp  RecipeRender.cpp  name_rack.py
